...
    //Sync Object Count - To be updated if more objects added here
    let syncObjectCount:Int = 10
    
    // keep the views loaded
    //home VC
    lazy var homeVC: UIViewController? = {
        let homeStoryboard = UIStoryboard.init(name: "Home", bundle: nil)
        let homeTabVC = homeStoryboard.instantiateViewController(withIdentifier: "HomeViewControllerID")
        return homeTabVC
    }()
    // accounts VC
    lazy var accountsVC : UIViewController? = {
        let accountsTabVC = self.storyboard?.instantiateViewController(withIdentifier: "AccountsViewControllerID")
...
        
        let tapOnline = UITapGestureRecognizer(target: self, action: #selector(ParentViewController.syncButtonPressed))
        onlineStatusView.isUserInteractionEnabled = true
        onlineStatusView.addGestureRecognizer(tapOnline)
        
        self.navigationItem.rightBarButtonItems = [userInitialLabelButton, self.notificationButton!, onlineSyncStatus!]
        let logoButton = UIBarButtonItem(image: UIImage(named: "AppLogo"), style:UIBarButtonItemStyle.plain, target: self, action: #selector(addTapped))
        if let instanceUrl: String = SFRestAPI.sharedInstance().user.credentials.instanceUrl?.description {
            if instanceUrl == StringConstants.detestServerUrl {
                logoButton.isEnabled = true
            }else{
                logoButton.isEnabled = false
            }
...
                    UIApplication.shared.open(url)
                }
                else
                {
                    let alert = UIAlertController(title: "Alert", message: "Topaz app is not installed", preferredStyle: .alert)
                    
                    let cancelAction = UIAlertAction(title: "OK", style: .cancel, handler: nil)
                    
                    alert.addAction(cancelAction)
                    self.present(alert, animated: true, completion: nil)
                    
                }
            }
...
