...
                                <rect key="frame" x="964" y="35" width="40" height="40"/>
                                <color key="backgroundColor" red="0.95686274510000002" green="0.95686274510000002" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="QE4-Py-s5f"/>
                                    <constraint firstAttribute="width" constant="40" id="Wbj-J3-koz"/>
                                </constraints>
                                <state key="normal" image="Close">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <action selector="closeButtonTapped:" destination="w9a-dQ-lU2" eventType="touchUpInside" id="vr3-aP-qBI"/>
                                </connections>
                            </button>
...
            <objects>
                <viewController storyboardIdentifier="AccountVisitSummaryViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overFullScreen" id="v9Q-k8-N2k" customClass="AccountVisitSummaryViewController" customModule="SWSApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Atp-6A-ZgO">
                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Dt-tf-onC">
                                <rect key="frame" x="50" y="40" width="80.5" height="43"/>
                                <fontDescription key="fontDescription" name="Ubuntu-Medium" family="Ubuntu" pointSize="38"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xYG-9I-MTa">
...
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U7c-NE-4lt">
                                        <rect key="frame" x="30" y="14" width="75" height="40"/>
                                        <color key="backgroundColor" red="0.89525987689999997" green="0.89525987689999997" blue="0.89525987689999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="clearButton"/>
                                        <fontDescription key="fontDescription" name="Ubuntu" family="Ubuntu" pointSize="16"/>
                                        <state key="normal" title="Clear">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="5"/>
                                            </userDefinedRuntimeAttribute>
...
